--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script async src="https://cse.google.com/cse.js?cx=b4260ec814a364d61">
+</script>
+<div class="gcse-search"></div>
     <div class="container">
         <div class="header">
             <h1>📚 Study Dashboard</h1>
